--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
