--- a/app/.env
+++ b/app/.env
@@ -1,1 +1,2 @@
-BACKEND_API_URL=https://backend-ccg-production.up.railway.app/api
+VITE_BACKEND_API_URL=https://backend-ccg-production.up.railway.app/api
+VITE_BACKEND_DEV_API_URL=https://backend-ccg-production.up.railway.app/api
