--- a/app/package.json
+++ b/app/package.json
@@ -21,10 +21,12 @@
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue3-carousel": "^0.4.0"
+    "vue3-carousel": "^0.4.0",
+    "vue3-google-map": "^0.21.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/google.maps": "^3.58.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.6",
     "@vitejs/plugin-vue": "^5.1.4",
